[package]
name = "iptable"
version = "0.1.0"
edition = "2021"
description = "Datastructure for efficient IP address lookup"
license = "Apache-2.0"
author = "Jelmer Vernooĳ <jelmer@jelmer.uk>"
repository = "https://github.com/jelmer/iptable-rs"
homepage = "https://github.com/jelmer/iptable-rs"

[dependencies]
ipnetwork = "0.20.0"

[dev-dependencies]
criterion = { version = ">=0.5", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "populate"
path = "bench/populate.rs"
harness = false
