[package]
name = "iptable"
version = "0.2.3"
edition = "2021"
description = "Datastructure for efficient IP address lookup"
license = "Apache-2.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
repository = "https://github.com/jelmer/iptable-rs"
homepage = "https://github.com/jelmer/iptable-rs"

[dependencies]
ipnetwork = "0.21.1"

[dev-dependencies]
criterion = { version = ">=0.5", features = ["html_reports"] }
rand = "0.9.2"

[[bench]]
name = "populate"
path = "bench/populate.rs"
harness = false
